@@ -1277,6 +1277,9 @@ Release 2.7.0 - UNRELEASED
 
     HDFS-7977. NFS couldn't take percentile intervals (brandonli)
 
+    HDFS-7963. Fix expected tracing spans in TestTracing along with HDFS-7054.
+    (Masatake Iwasaki via kihwal)
+
     BREAKDOWN OF HDFS-7584 SUBTASKS AND RELATED JIRAS
 
       HDFS-7720. Quota by Storage Type API, tools and ClientNameNode
